add fuzzed metal

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(RayTracing VERSION 0.1.0)
 include(CTest)
 enable_testing()
 
-add_executable(RayTracing main.cc)
+add_executable(RayTracing ./src/main.cc)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
